--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <main>
-      <section class="sectionone"><div>
+      <section class="sectionone"><div >
         <header>
-          <img src="logo (1).svg" alt="logo" />
-          <h1>Join the <br> ultimate tech <br> book club</h1>
+          <img id="firstlogo" src="logo (1).svg" alt="logo" />
+          <h1 class="h1">Join the <br> ultimate tech <br> book club</h1>
           <p class="p1">
             Turn your reading time into learning time with fellow tech <br>
             enthusiasts. Get curated recommendations, join vibrant <br> discussions,
@@ -22,17 +22,17 @@
             review membership opttion
             <img  src="icon-arrow-down.svg" alt="icon" />
           </button>
-          
+          <div>
             <img src="image-avatars.webp" alt="porfiles member" />
-            <
-              <ul style="display: flex; list-style-type: none">
+            
+              <ul class="ul1" style="display: flex;">
                 <li><img src="icon-star (1).svg" alts="star" /></li>
                 <li><img src="icon-star (1).svg" alts="star" /></li>
                 <li><img src="icon-star (1).svg" alts="star" /></li>
                 <li><img src="icon-star (1).svg" alts="star" /></li>
                 <li><img src="icon-star (1).svg" alts="star" /></li>
                 <span>200+ developers joined already</span>
-              </ul>
+              </ul></div>
             </div>
             <div><img class="hero" src="image-hero-desktop.webp" alt="" /></div>
           </div>
