--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
           <p>Connect with a community that speaks your language - from Python to TypeScript and everything in between. Our discussions blend technical depth with practical applications.</p> 
       
       </section>
-      <section><div><img class="averageimg" src="image-not-average-desktop.webp" alt="image-not-average-desktop">
+      <section><div> 
+        <img class="averageimg" 
+        src="image-not-average-desktop.webp" alt="image-not-average-desktop">
     <img src="logos-tech (1).svg" alt=""></div></section>
     <section><div><h2>Your tech reading journey
 </h2>
